--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
     background-color: #fff;
     border-radius: 15px;
     padding: 3.5vmax;
+    box-shadow: 0 0 15px #00000023;
 }
 
 .mb-2 {
@@ -29,7 +30,17 @@ body {
     font-weight: bold;
     letter-spacing: -1px;
     margin-bottom: 7px;
+    display: flex;
+    justify-content: space-between;
 }
+.err-title-alert {
+    display: none;
+    color: hsl(0, 100%, 71%);
+}
+.err-title-alert-active {
+    display: block;
+}
+
 .inf-input {
     width: 90%;
     text-align: right;
@@ -41,11 +52,13 @@ body {
     color: hsl(183, 100%, 15%);
     border-radius: 12px;
 }
-.inf-input:hover {
+.inf-input:focus {
     box-shadow: 0 0 0 2px hsl(172, 67%, 45%);
     /* border: 2px solid hsl(172, 67%, 45%);
     box-sizing: border-box; */
+    outline: none;
 }
+
 .input-w-icon {
     display: flex;
     position: relative;
@@ -63,6 +76,17 @@ body {
 
 .inf-selecttip .title-inf {
     grid-column: 1/3;
+    grid-row: 1;
+}
+
+.alert-inf-selecttip {
+    display: none;
+    grid-row: 1;
+    text-align: right;
+    color: hsl(0, 100%, 71%);
+}
+.alert-inf-selecttip-active {
+    display: block;
 }
 
 .inf-selecttip .btn-selecttip {
@@ -75,6 +99,26 @@ body {
     border-radius: 5px;
     padding: 1.2vmax 0;
     cursor: pointer;
+}
+
+.inf-selecttip .ipt-selecttip {
+    width: 95%;
+    border: none;
+    text-align: center;
+    margin: 5px;
+    background-color: hsl(189, 41%, 97%);
+    color: hsl(186, 14%, 43%);
+    font-weight: bold;
+    padding: 1.2vmax 0;
+    font-size: 1.1rem;
+    grid-row: 4;
+    grid-column: 2;
+    border-radius: 5px;
+}
+.inf-selecttip .ipt-selecttip:focus {
+    background-color: hsl(172, 67%, 45%);
+    color:hsl(183, 100%, 15%);
+    outline: none;
 }
 
 .inf-selecttip .btn-custom {
@@ -137,6 +181,7 @@ body {
     background-color: #fff;
     padding: 3vmax 2vmax;
     border-radius: 15px 15px 0 0;
+    box-shadow: 0 0 15px #00000023
 }
 
 @media screen and (min-width: 1080px) {
@@ -161,6 +206,19 @@ body {
     }
     .inf-input {
         width: 100%;
+    }
+    .inf-selecttip .ipt-selecttip {
+        width: 95%;
+        border: none;
+        text-align: center;
+        margin: 5px;
+        background-color: hsl(189, 41%, 97%);
+        color: hsl(186, 14%, 43%);
+        font-weight: bold;
+        padding: 1.2vmax 0;
+        font-size: 1.1rem;
+        grid-row: 3;
+        grid-column: 3;
     }
     .container-result {
         position: relative;
